Fixed spacing problem on publications, TARGET Projects, & CGCI Projects.

--- a/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
+++ b/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
@@ -1574,7 +1574,9 @@ span.noicon {
   padding-bottom: 0;
 }
 
-.view-publications.view-display-id-page_2 .views-field-field-publication-summary {
+.view-publications.view-display-id-page_2 .views-field-field-publication-summary,
+.view-publications.view-display-id-page_1 .views-field-field-publication-summary,
+.view-projects.view-display-id-page_1 .views-field-body {
   margin-bottom: 40px;
 }
 
